# litentry-parachain

.github/workflows/: ci.yml
node/src/chain_specs/: litmus.rs  rococo.rs
pallets/identity-management/src/: lib.rs
primitives/core/src/: error.rs
runtime/litmus/src/: lib.rs
runtime/rococo/src/: lib.rs  migration.rs
tee-worker/app-libs/sgx-runtime/: Cargo.toml
tee-worker/app-libs/sgx-runtime/src/: lib.rs
tee-worker/app-libs/stf/src/: lib.rs  stf_sgx.rs  trusted_call.rs  trusted_call_litentry.rs
tee-worker/cli/: Cargo.toml  demo_sidechain.sh
tee-worker/cli/src/: command_utils.rs  trusted_operation.rs
tee-worker/cli/src/base_cli/: mod.rs
tee-worker/cli/src/base_cli/commands/: faucet.rs  listen.rs  shield_funds.rs  transfer.rs
tee-worker/core-primitives/extrinsics-factory/: Cargo.toml
tee-worker/core-primitives/extrinsics-factory/src/: lib.rs  mock.rs
tee-worker/core-primitives/node-api/api-client-extensions/: Cargo.toml
tee-worker/core-primitives/node-api/api-client-extensions/src/: account.rs  chain.rs  lib.rs  pallet_teerex.rs  pallet_teerex_api_mock.rs
tee-worker/core-primitives/node-api/api-client-types/: Cargo.toml
tee-worker/core-primitives/node-api/api-client-types/src/: lib.rs
tee-worker/core-primitives/node-api/factory/: Cargo.toml
tee-worker/core-primitives/node-api/factory/src/: lib.rs
tee-worker/core-primitives/node-api/metadata/: Cargo.toml
tee-worker/core-primitives/node-api/metadata/src/: lib.rs
tee-worker/core-primitives/stf-executor/: Cargo.toml
tee-worker/core-primitives/stf-executor/src/: executor.rs
tee-worker/core-primitives/types/: Cargo.toml
tee-worker/core-primitives/types/src/: lib.rs
tee-worker/core/offchain-worker-executor/: Cargo.toml
tee-worker/core/offchain-worker-executor/src/: executor.rs
tee-worker/core/parentchain/block-importer/src/: block_importer.rs
tee-worker/core/parentchain/indirect-calls-executor/: Cargo.toml
tee-worker/core/parentchain/indirect-calls-executor/src/: filter_calls.rs  indirect_calls_executor.rs  lib.rs  parentchain_extrinsic_parser.rs  traits.rs
tee-worker/core/parentchain/light-client/src/: io.rs
tee-worker/core/rpc-client/: Cargo.toml
tee-worker/enclave-runtime/: Cargo.toml
tee-worker/enclave-runtime/src/: top_pool_execution.rs
tee-worker/enclave-runtime/src/initialization/: global_components.rs
tee-worker/enclave-runtime/src/initialization/parentchain/: common.rs
tee-worker/litentry/pallets/identity-management/: Cargo.toml
tee-worker/litentry/pallets/identity-management/src/: lib.rs  tests.rs
tee-worker/litentry/primitives/src/: lib.rs
tee-worker/local-setup/: launch.py
tee-worker/local-setup/py/: worker.py
tee-worker/service/: Cargo.toml
tee-worker/service/src/: account_funding.rs  error.rs  main.rs  parentchain_handler.rs  sync_state.rs  worker.rs
tee-worker/service/src/ocall_bridge/: component_factory.rs  worker_on_chain_ocall.rs
tee-worker/service/src/tests/: mock.rs
tee-worker/sidechain/consensus/common/: Cargo.toml
tee-worker/sidechain/consensus/common/src/: block_import_confirmation_handler.rs
tee-worker/sidechain/peer-fetch/: Cargo.toml
tee-worker/sidechain/peer-fetch/src/: untrusted_peer_fetch.rs
tee-worker/ts-tests/: indirect_calls.ts  package.json  utils.ts  vc.test.ts
(+16 files in other folders)
