[package]
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"
name = "itp-api-client-types"
version = "0.9.0"

[dependencies]

# scs
substrate-api-client = { default-features = false, git = "https://github.com/litentry/substrate-api-client.git", branch = "polkadot-v0.9.32" }

# substrate
sp-core = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# local deps
#my-node-runtime = { package = "rococo-parachain-runtime", default-features = false, path = "../../../../runtime/rococo" }
my-node-runtime = { package = "integritee-node-runtime", default-features = false, git = "https://github.com/litentry/integritee-node.git", branch = "litentry-runtime" }

[features]
default = ["std"]
std = [
    "substrate-api-client/std",
    "substrate-api-client/tungstenite-client",
    "sp-core",
    "my-node-runtime/std",
]
