[package]
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"
name = "itp-node-api-factory"
version = "0.9.0"

[dependencies]
thiserror = { version = "1.0" }
substrate-api-client = { default-features = false, git = "https://github.com/litentry/substrate-api-client.git", branch = "polkadot-v0.9.32" }

# substrate
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# local
itp-api-client-types = { path = "../api-client-types" }
itp-types = { path = "../../types" }

